--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       property="og:description"
       content="I hate writing assignments so I made this tool that converts text to an image that looks like handwriting. You can copy paste text content into the textbox and click generate image button to generate image. Text to Handwriting"
     />
-    <meta property="og:site_name" content="Text to Handwriting" />
+    <meta property="og:site_name" content="Assignment Guru" />
 
     <meta
       property="og:image:secure_url"
@@ -63,7 +63,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@saurabhcodes" />
 
-    <title>Text to Handwriting</title>
+    <title>Assignment Guru</title>
 
     <!-- Favicons -->
     <link
@@ -100,7 +100,7 @@
 
   <body>
     <main>
-      <button
+      <!-- <button
         aria-label="Activate Dark Mode"
         title="Toggle Dark Mode"
         aria-pressed="false"
@@ -119,18 +119,18 @@
             width="25px"
             src="images/moon.svg"
         /></span>
-      </button>
-      <h1>Text to Handwriting</h1>
+      </button> -->
+      <!-- <h1 style="margin-top: -80px;">Assignment Guru</h1> -->
       <section class="generate-image-section">
         <br /><br />
-        <form id="generate-image-form">
+        <form style="margin-top: -150px;" id="generate-image-form">
           <!-- Generate Image Section -->
           <div class="display-flex output-grid responsive-flex">
             <div class="flex-1 page-container-super">
-              <div>
-                <h2 style="margin-top: 0px;">Input</h2>
+              <!-- <div>
+                <h2 style="margin-top: -120px;">Input</h2>
                 <label class="block" for="note">Type/Paste text here</label>
-              </div>
+              </div> -->
 
               <div class="flex-1 page-container">
                 <div class="page-a margined lines">
@@ -163,7 +163,7 @@
                 <br />
               </div>
 
-              <div>
+              <!-- <div>
                 <button
                   id="draw-diagram-button"
                   type="button"
@@ -172,7 +172,7 @@
                 >
                   Draw <small>(Beta)</small>
                 </button>
-              </div>
+              </div> -->
             </div>
 
             <div class="customization-col">
@@ -412,8 +412,8 @@
         </div>
       </section>
 
-      <section id="how-to-add-handwriting">
-        <h2>🤓 Guide to add your own handwriting</h2>
+      <!-- <section id="how-to-add-handwriting">
+        <h2> Guide to add your own handwriting</h2>
         <div>
           <ul>
             <li>
@@ -436,9 +436,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section id="sponsors">
+      <!-- <section id="sponsors">
         <h2>🤗 Sponsors</h2>
         <p>
           This tool is completely free and neither stores any of your data for
@@ -524,7 +524,7 @@
       <br />byeeee! <br /><br />
       ~ Saurabh (<a href="https://saurabhdaware.in">https://saurabhdaware.in</a
       >)
-    </footer>
+    </footer> -->
 
     <!-- Fixed Elements -->
     <section class="draw-container popup-container">
@@ -569,7 +569,7 @@
       </div>
     </section>
     <!-- GitHub Corner logo -->
-    <a
+    <!-- <a
       tabindex="0"
       href="https://github.com/saurabhdaware/text-to-handwriting"
       rel="noopener noreferrer"
@@ -604,7 +604,7 @@
           class="octo-body"
         ></path>
       </svg>
-    </a>
+    </a> -->
 
     <script
       src="./js/vendors/html2canvas.min.js"
