--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
     <meta name="robots" content="follow" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Text to Handwriting" />
-    <meta
+    <!-- <meta
       property="og:url"
       content="https://saurabhdaware.github.io/text-to-handwriting"
     />
     <meta
       property="og:description"
       content="I hate writing assignments so I made this tool that converts text to an image that looks like handwriting. You can copy paste text content into the textbox and click generate image button to generate image. Text to Handwriting"
-    />
+    /> -->
     <meta property="og:site_name" content="Assignment Guru" />
 
-    <meta
+    <!-- <meta
       property="og:image:secure_url"
       itemprop="image"
       content="https://res.cloudinary.com/saurabhdaware/image/upload/v1585413874/saurabh2019/projects/text-to-handwriting.png"
-    />
-    <meta
+    /> -->
+    <!-- <meta
       property="og:image"
       itemprop="image"
       content="https://res.cloudinary.com/saurabhdaware/image/upload/v1585413874/saurabh2019/projects/text-to-handwriting.png"
-    />
+    /> -->
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="337" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@saurabhcodes" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@saurabhcodes" /> -->
 
     <title>Assignment Guru</title>
 
